--- a/client/tasks.jade
+++ b/client/tasks.jade
@@ -40,7 +40,7 @@ template(name='tasks')
                     +task
                     
                 
-template(name='task')
+template(name='task_card_template')
     .ui.fluid.card
         if before_image_id
             .image
