--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -202,8 +202,8 @@ template(name='creation_info')
 template(name='user_list_toggle')
     if currentUser
         .ui.icon.compact.button.toggle(class=user_list_toggle_class title=label)
-            //- i.icon(class=icon)
-            +ismall name=icon classes='ui inline image'
+            i.icon(class=icon)
+            //- +ismall name=icon classes='ui inline image'
             //- |#{label}
         //- each list_users
         //-     +user_info
