--- a/client/product.jade
+++ b/client/product.jade
@@ -91,37 +91,37 @@ template(name='shop_view_layout')
                     .ui.large.header #{title}
                     if can_edit
                         a.ui.fluid.button(href="/shop/#{_id}/edit")
-                            i.cog.icon
+                            i.cog.grey.icon
                             |edit
                     .ui.large.vertical.fluid.menu
                         a.item(href="/shop/#{_id}/info" class="{{isActiveRoute 'shop_info'}}")
                             |info
-                            i.info.icon
+                            i.info.grey.icon
                         if rentable
                             a.item(href="/shop/#{_id}/rentals" class="{{isActiveRoute 'shop_rentals'}}")
                                 |rentals
-                                i.clock.icon
+                                i.clock.grey.icon
                         a.item(href="/shop/#{_id}/chat" class="{{isActiveRoute 'shop_chat'}}")
                             |chat
-                            i.chat.icon
+                            i.chat.grey.icon
                         a.item(href="/shop/#{_id}/tasks" class="{{isActiveRoute 'shop_tasks'}}")
                             |tasks
-                            i.tasks.icon
+                            i.tasks.grey.icon
                         a.item(href="/shop/#{_id}/earnings" class="{{isActiveRoute 'shop_earnings'}}")
                             |earnings
-                            i.money.icon
+                            i.money.grey.icon
                         a.item(href="/shop/#{_id}/stats" class="{{isActiveRoute 'shop_stats'}}")
                             |stats
-                            i.line.chart.icon
+                            i.line.chart.grey.icon
                         a.item(href="/shop/#{_id}/ownership" class="{{isActiveRoute 'product_ownership'}}")
                             |ownership
-                            i.pie.chart.icon
+                            i.pie.chart.grey.icon
                         a.item(href="/shop/#{_id}/projections" class="{{isActiveRoute 'shop_projections'}}")
                             |projections
-                            i.line.chart.icon
+                            i.line.chart.grey.icon
                         a.item(href="/shop/#{_id}/ads" class="{{isActiveRoute 'shop_ads'}}")
                             |ads
-                            i.bullhorn.icon
+                            i.bullhorn.grey.icon
                     img.ui.centered.rounded.shadowed.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
                     .ui.header added by #{_author_username}
                     |#{when}
@@ -144,27 +144,10 @@ template(name='shop_view_layout')
                 .eight.wide.column
                     +yield
                 .four.wide.column
-                    .ui.small.horizontal.statistics
-                        .ui.statistic
-                            .value 
-                                |$#{past_earnings}
-                            .label
-                                |past earnings 
-                        .ui.statistic
-                            .value 
-                                |$#{future_earnings}
-                            .label
-                                |future earnings 
-                        .ui.statistic
-                            .value 
-                                |#{future_reservations}
-                            .label
-                                |future reservations
-                        .ui.statistic
-                            .value 
-                                |#{past_reservations}
-                            .label
-                                |past reservations
+                    .ui.header $#{past_earnings} past earnings 
+                    .ui.header $#{future_earnings} future earnings 
+                    .ui.header #{future_reservations} future reservations
+                    .ui.header #{past_reservations} past reservations
                     div
                     +product_location
                     .ui.header available_inventory #{inventory_available}
@@ -172,7 +155,7 @@ template(name='shop_view_layout')
                         unless sold_out
                             .ui.big.green.fluid.button.add_to_cart 
                                 i.cart.plus.icon
-                                |add to cart
+                                |+ cart
                         else 
                             .ui.big.disabled.button
                                 i.ban.icon
@@ -186,24 +169,24 @@ template(name='shop_view_layout')
                             |#{delivery_instructions}      
                         .ui.header
                             i.truck.icon
-                            |delivery options
+                            |delivery
                         +boolean_view key='pickup_delivery' label='pickup' direct=true
                         +boolean_view key='home_dropoff_delivery' label='home dropoff' direct=true
                         +boolean_view key='building_dropoff_delivery' label='building dropoff' direct=true
                         +boolean_view key='healthclub_drop_off_delivery' label='health club drop off' direct=true
-                        .ui.header pricing options
+                        .ui.header pricing
                         +boolean_view key='cash_accepted' label='cash accepted' direct=true
                         +boolean_view key='prepay' label='prepayment required' direct=true
                         +boolean_view key='security_deposit_required' label='security deposit required' direct=true
                         if security_deposit_required
                             +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
-                        .ui.header pricing planning determination options
+                        .ui.header pricing planning determination
                         +boolean_view key='friend_discount' label='friend discount' direct=true
                         if friend_discount
                             +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
                         .ui.header
                             i.grey.eye.icon
-                            | privacy options
+                            | privacy
                         .ui.small.header visibility
                         +boolean_view key='visible_to_friends' label='visible to friends' direct=true
                         +boolean_view key='visible_to_building' label='visible to building' direct=true
@@ -237,7 +220,7 @@ template(name='product_ads')
             .ui.header current ad
             .ui.disabled.button buy now
         else
-            .ui.button advertise
+            .ui.button.create_product_ad advertise
     
     
     
@@ -275,19 +258,19 @@ template(name='shop_earnings')
         |shop earnings
     .ui.segment
         .ui.small.header 
-            i.clock.icon
+            i.clock.grey.icon
             |past reservations #{past_reservations}
         .ui.small.header 
-            i.clock.icon
+            i.clock.grey.icon
             |future reservations #{future_reservations}
         .ui.small.header 
-            i.money.icon
+            i.money.grey.icon
             |past earnings $#{past_earnings}
         .ui.small.header 
-            i.money.icon
+            i.money.grey.icon
             |future earnings $#{future_earnings}
-        .ui.icon.button.calculate_future_earnings 
-            i.refresh.icon
+        .ui.grey.icon.button.calculate_future_earnings 
+            i.refresh.grey.icon
             //- calculate future earnings
     .ui.segment
         .ui.small.header total earnings
